# plasma-smart-video-wallpaper-reborn

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Pygame  README.md  install.sh  kpac  package-wallpaper.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: i18n-extract-translations.yml  i18n-validate-translations.yml  release-please.yml
SmartVideoWallpaper/: README.md  setImageWallpaper.sh  setSmartVideoWallpaper.sh
SmartVideoWallpaper/smartvideowallpaper/: metadata.desktop
SmartVideoWallpaper/smartvideowallpaper/contents/config/: main.xml
SmartVideoWallpaper/smartvideowallpaper/contents/ui/: ReadMe.qml  WindowModel.qml  config.qml  loading.qml  main.qml
SmartVideoWallpaper/smartvideowallpaper/contents/ui/mediaplayer/: player.qml
package/: metadata.desktop  metadata.json
package/contents/config/: main.xml
package/contents/ui/: DBusPrimary.qml  DBusSignalMonitor.qml  DayNightCycleController.qml  DayNightCyclePlugin.qml  DayNightCycleTimer.qml  EffectsModel.qml  EnvironmentVariableModel.qml  FadePlayer.qml  FileStatHelper.qml  MetadataHelper.qml  NighttimeHelper.qml  QuickPreview.qml  ReadMe.qml  RunCommand.qml  ScreenModel.qml  SessionModel.qml  ShowDesktopMonitor.qml  TasksModel.qml  VideoPlayer.qml  VideoPlayerMpvQt.qml  VideoPlayerQt.qml  VideosModel.qml  WindowModel.qml  config.qml  main.qml  player.qml
package/contents/ui/code/: enum.js  metadataCache.js  utils.js
package/contents/ui/components/: CheckableValueListView.qml  ComboBoxWithIcons.qml  Donate.qml  Header.qml  TimePicker.qml
package/contents/ui/mediaplayer/: WindowModel.qml
package/contents/ui/preview/: Icon Licence.txt  QuickPreview.qml
package/translate/: .ru.po.kate-swp  ReadMe.md  el_GR.po  el_GR.pot  es.po  nl.po  pt_BR.po  ru.po  template.pot
plugin/: CMakeLists.txt  daynight.cpp  daynight.h  mpvitem.cpp  mpvitem.h  mpvplugin.cpp  mpvproperties.h  nighttime.cpp  nighttime.h  nighttimeplugin.cpp  qmldir  smartvideowallpaperplugin.cpp
translate/: CMakeLists.txt  README.md  el_GR.po  es.po  ja.po  nl.po  pt_BR.po  ru.po  template.pot  zh_CN.po  zh_Hans_CN.po  zh_TW.po
